--- a/1-1. Create-Account.md
+++ b/1-1. Create-Account.md
@@ -11,24 +11,30 @@
 1. **Locate the Quest Keypair**: Find the box on the right-hand side of the quest screen. 
 2. **Click the Fund Button**: Click the "Fund" button next to the Quest Keypair. This will fund the keypair with 10,000 fake XLM from Stellar’s testnet faucet, known as friendbot.
 
+![Screenshot 2025-02-18 at 13-51-48 Stellar Quest - Launch Your Blockchain Education](https://github.com/user-attachments/assets/2303dc08-75ac-444a-ab78-173b6c9bcc73)
+
+
 ## Step 2: Generate a New Account
-1. **Go to the Stellar Laboratory**: Open the Stellar Laboratory and select the "Create Account" tab in the main navigation bar.
+1. **Go to the Stellar Laboratory**: Open the Stellar Laboratory and select the "Create Account" tab in the main navigation bar. [Here](https://lab.stellar.org/account/create?$=network$id=testnet&label=Testnet&horizonUrl=https:////horizon-testnet.stellar.org&rpcUrl=https:////soroban-testnet.stellar.org&passphrase=Test%20SDF%20Network%20/;%20September%202015;;)
 2. **Generate a Keypair**: Click the "Generate Keypair" button.
 3. **Save the Keys**: Save the public and secret keys somewhere on your computer. This new account will be referred to as Account 2.
 
 ## Step 3: Build the Transaction
-1. **Navigate to the Build Transaction Tab**: Go to the "Build Transaction" tab in the main navigation bar.
-2. **Set Transaction Type**: Set the transaction type to "Transaction".
-3. **Input Source Account**: Enter the public key from the Quest Account into the Source Account field.
-4. **Fetch Sequence Number**: Click the "Fetch Next Sequence Number for Account Starting with 'G…'" button.
-5. **Set Base Fee**: Set the base fee to 100 stroops.
-6. **Leave Memo and Time Bounds Blank**: Leave both the Memo and Time Bounds fields blank.
+1. **Navigate to the Build Transaction Tab**: Go to the "Build Transaction" tab in the main navigation bar. [Here](https://lab.stellar.org/transaction/build?$=network$id=testnet&label=Testnet&horizonUrl=https:////horizon-testnet.stellar.org&rpcUrl=https:////soroban-testnet.stellar.org&passphrase=Test%20SDF%20Network%20/;%20September%202015;&transaction$build$classic$operations@$operation_type=&params@;;)
+2. **Input Source Account**: Enter the public key from the Quest Account into the Source Account field.
+3. **Fetch Sequence Number**: Click the "Fetch Next Sequence Number for Account Starting with 'G…'" button.
+4. **Set Base Fee**: Set the base fee to 100 stroops.
+5. **Leave Memo and Time Bounds Blank**: Leave both the Memo and Time Bounds fields blank.
+   ![image](https://github.com/user-attachments/assets/2e82da5d-a031-42f9-9f12-037dc828ef91)
+
 
 ## Step 4: Add the Create Account Operation
 1. **Select Operation Type**: Choose "Create Account" as the operation type.
 2. **Input Destination**: Enter the public key of Account 2 as the destination.
 3. **Set Starting Balance**: Choose an amount less than 10,000 XLM to send from the Quest Account to Account 2.
 4. **Leave Source Account Blank**: Leave the operational source account field blank.
+![image](https://github.com/user-attachments/assets/199e35dd-4cfd-4eb1-80e9-9cac2defaf12)
+
 
 ## Step 5: Sign the Transaction
 1. **Scroll Down and Sign**: Scroll down and click the "Sign in Transaction Signer" button.
@@ -38,10 +44,14 @@
 ## Step 6: Submit the Transaction
 1. **Submit the Transaction**: Click the "Submit in Transaction Submitter" button.
 2. **Verify the Transaction**: Click the "Submit Transaction" button to submit the transaction to the network.
+![image](https://github.com/user-attachments/assets/63a7b6de-ee00-444e-9deb-e90440548054)
+![image](https://github.com/user-attachments/assets/f20e9c01-079b-426f-9022-6d9056968b71)
 
 ## Step 7: Verify and Collect Your Badge
 1. **Check the Quest Screen**: Return to the Stellar Quest screen and click the "Verify" button.
 2. **Collect Your Badge**: If successful, collect your first Stellar Quest Learn NFT badge.
+![image](https://github.com/user-attachments/assets/e7944f82-37b5-468d-98e4-131cc0523eec)
+
 
 ## Step 8: Check Account Activity (Optional)
 1. **Navigate to Stellar Expert**: Go to [Stellar Expert](https://stellar.expert).
@@ -50,4 +60,4 @@
 4. **Review Account Details**: Check your account’s balances and transactions.
 
 ## Troubleshooting
-- **If the Quest Fails**: Double-check your transaction details and ensure all fields are correctly filled. If you need help, visit the Stellar Quest Discord community for assistance.
+- **If the Quest Fails**: Double-check your transaction details and ensure all fields are correctly filled. If you need help, visit the Stellar Discord community for assistance.
