--- a/1-2. Payment.md
+++ b/1-2. Payment.md
@@ -3,6 +3,13 @@
 ## Overview
 In this quest, you will perform a payment operation by submitting a transaction containing that payment operation on the Stellar test network from the Quest Account to another account.
 
+## Relevant Links
+- [Stellar Laboratory](https://www.stellar.org/laboratory/)
+- [Stellar Expert](https://stellar.expert/)
+- [Join Stellar Developer Commuinity](https://discord.com/invite/stellardev)
+- [Stellar Documentation](https://developers.stellar.org/docs/)
+- [Create Account Keypair](https://lab.stellar.org/account/create)
+
 ## Step 1: Navigate to the Laboratory
 1. **Open the Stellar Laboratory**: Go to the [Stellar Laboratory](https://www.stellar.org/laboratory/).
 2. **Select the Build Transaction Tab**: Navigate to the "Build Transaction" tab in the main navigation bar.
