--- a/1-3. Change_Trust.md
+++ b/1-3. Change_Trust.md
@@ -48,6 +48,8 @@ In this quest, you will establish a trustline between the Quest Account and anot
 ## Step 6: Verify and Collect Your Badge
 1. **Check the Quest Screen**: Return to the Stellar Quest Learn page and click the "Verify" button.
 2. **Collect Your Badge**: If successful, collect your new badge.
+<img width="283" alt="image" src="https://github.com/user-attachments/assets/c42fc0b2-fc33-4b3c-8e5e-5d94ea6b0369" />
+
 
 ## Bonus Quest: Combine Payment with Change Trust
 1. **Combine Operations**: Add both the `changeTrust` operation and a `payment` operation to the same transaction.
