Manage_Offers correction

--- a/1-4. Manage_Offers.md
+++ b/1-4. Manage_Offers.md
@@ -15,17 +15,23 @@ In this quest, you will open a buy or sell offer on the Quest Account using the 
 2. **Select the Build Transaction Tab**: Navigate to the "Build Transaction" tab in the main navigation bar.
 
 ## Step 2: Fill Out the Necessary Fields
-1. **Set Transaction Type**: Set the transaction type to "Transaction".
-2. **Input Source Account**: Enter the public key of the Quest Account.
-3. **Fetch Sequence Number**: Click the "Fetch Next Sequence Number for Account Starting with 'G…'" button.
-4. **Set Base Fee**: Set the base fee to 100 stroops.
+1. **Input Source Account**: Enter the public key of the Quest Account.
+2. **Fetch Sequence Number**: Click the "Fetch Next Sequence Number for Account Starting with 'G…'" 3utton.
+3. **Set Base Fee**: Set the base fee to 100 stroops.
 5. **Leave Memo and Time Bounds Blank**: Leave both the Memo and Time Bounds fields blank.
 
 ## Step 3: Add the Manage Offer Operation
-### Manage Buy Offer
-1. **Select Operation Type**: Choose "Manage Buy Offer".
-2. **Selling Asset**:
+### Trusting Issuer
+1. **Select Operation Type**: Choose "Change Trust".
+2. **Filling Info**:
    - **Asset Code**: Enter the code of the asset you are offering to give (e.g., `XLM`).
+   - **Issuer Account ID**: Enter the public key of the issuing account (for `XLM`, this is the network's native asset).
+3. Sign the transaction with Secret Key.
+
+### Manage Buy Offer
+1. **Select Operation Type**: Back to Transaction Section. Choose Operation type "Manage Buy Offer".
+2. **Selling Section**:
+   - **Asset Code**: Enter the code of the asset you are offering to give (e.g., Native for `XLM`).
    - **Issuer Account ID**: Enter the public key of the issuing account (for `XLM`, this is the network's native asset).
 3. **Buying Asset**:
    - **Asset Code**: Enter the code of the asset you are seeking to receive (e.g., `USD`).
