--- a/1-4. Manage_Offers.md
+++ b/1-4. Manage_Offers.md
@@ -26,45 +26,23 @@ In this quest, you will open a buy or sell offer on the Quest Account using the 
 2. **Filling Info**:
    - **Asset Code**: Enter the code of the asset you are offering to give (e.g., `XLM`).
    - **Issuer Account ID**: Enter the public key of the issuing account (for `XLM`, this is the network's native asset).
-3. Sign the transaction with Secret Key.
+3. Sign the transaction with Quest Secret Key.
+<img width="638" alt="image" src="https://github.com/user-attachments/assets/9508228b-c4d2-4915-83ee-51cc72f87020" />
 
-### Manage Buy Offer
-1. **Select Operation Type**: Back to Transaction Section. Choose Operation type "Manage Buy Offer".
+
+## Step 3: Manage Buy Offer
+1. **Select Operation Type**: Back to Build Transaction Section. Choose Operation type "Manage Buy Offer".
 2. **Selling Section**:
    - **Asset Code**: Enter the code of the asset you are offering to give (e.g., Native for `XLM`).
-   - **Issuer Account ID**: Enter the public key of the issuing account (for `XLM`, this is the network's native asset).
+   - **Issuer Account ID**: Enter the public key of the issuing account (for Other Tokens,).
 3. **Buying Asset**:
-   - **Asset Code**: Enter the code of the asset you are seeking to receive (e.g., `USD`).
+   - **Asset Code**: Enter the code of the asset you are seeking to receive (e.g., `USDC`).
    - **Issuer Account ID**: Enter the public key of the issuing account.
 4. **Amount You Are Buying**: Enter the amount of the buying asset you require to receive.
 5. **Price**: Calculate the price by dividing the amount you are selling by the amount you are buying. For example, if you want to buy 10 USD for 100 XLM, the price would be `100/10 = 10`.
 6. **Offer ID**: Set to `0` to create a new offer. To update or delete an existing offer, input the offer ID here.
 7. **Source Account**: The account that gives the selling asset and receives the buying asset in this offer.
-
-### Manage Sell Offer
-1. **Select Operation Type**: Choose "Manage Sell Offer".
-2. **Selling Asset**:
-   - **Asset Code**: Enter the code of the asset you are offering to give.
-   - **Issuer Account ID**: Enter the public key of the issuing account.
-3. **Buying Asset**:
-   - **Asset Code**: Enter the code of the asset you are seeking to receive.
-   - **Issuer Account ID**: Enter the public key of the issuing account.
-4. **Amount You Are Selling**: Enter the amount of the selling asset you require to give.
-5. **Price**: Calculate the price by dividing the amount you are buying by the amount you are selling. For example, if you want to sell 100 XLM for 10 USD, the price would be `10/100 = 0.1`.
-6. **Offer ID**: Set to `0` to create a new offer. To update or delete an existing offer, input the offer ID here.
-7. **Source Account**: The account that gives the selling asset and receives the buying asset in this offer.
-
-### Create Passive Sell Offer
-1. **Select Operation Type**: Choose "Create Passive Sell Offer".
-2. **Selling Asset**:
-   - **Asset Code**: Enter the code of the asset you are offering to give.
-   - **Issuer Account ID**: Enter the public key of the issuing account.
-3. **Buying Asset**:
-   - **Asset Code**: Enter the code of the asset you are seeking to receive.
-   - **Issuer Account ID**: Enter the public key of the issuing account.
-4. **Amount You Are Selling**: Enter the amount of the selling asset you require to give.
-5. **Price**: Calculate the price by dividing the amount you are buying by the amount you are selling.
-6. **Source Account**: The account that gives the selling asset and receives the buying asset in this offer.
+<img width="548" alt="image" src="https://github.com/user-attachments/assets/adcd8eac-e625-4885-af26-031eb3fcda50" />
 
 ## Step 4: Sign the Transaction
 1. **Scroll Down and Sign**: Scroll down and click the "Sign in Transaction Signer" button.
@@ -78,8 +56,10 @@ In this quest, you will open a buy or sell offer on the Quest Account using the 
 ## Step 6: Verify and Collect Your Badge
 1. **Check the Quest Screen**: Return to the Stellar Quest Learn page and click the "Verify" button.
 2. **Collect Your Badge**: If successful, collect your new badge.
+<img width="275" alt="image" src="https://github.com/user-attachments/assets/d0f90254-9d59-4bd6-a6e7-e2714f26adff" />
+
 
 ## Troubleshooting
-- **Transaction Failed**: If the transaction fails, double-check your transaction details and ensure all fields are correctly filled. If you need help, visit the Stellar Quest Discord community for assistance.
+- **Transaction Failed**: If the transaction fails, double-check your transaction details and ensure all fields are correctly filled. If you need help, visit the Stellar Discord community or Stellar India TG for assistance.
 
 - By following these steps, you should be able to successfully complete the Stellar Merge Offer Quest and gain a deeper understanding of how to manage offers on the Stellar decentralized exchange.
