--- a/2-2. Manage_Data.md
+++ b/2-2. Manage_Data.md
@@ -29,6 +29,7 @@ In this quest, you will add a data entry to the Quest Account using the Manage D
 3. **Entry Value**: Enter the 64-byte binary value for your data entry. Leave this blank if you want to delete the data entry.
    - **Note**: In Horizon, the Entry Value is base64 encoded. To get the actual value, you’ll need to convert these values from base64.
 4. **Source Account**: Ensure the Quest Account's public key is set as the source account.
+![image](https://github.com/user-attachments/assets/899d4849-85c5-484d-a7b8-ddad1f1d640e)
 
 ## Step 4: Sign the Transaction
 1. **Scroll Down and Sign**: Scroll down and click the "Sign in Transaction Signer" button.
@@ -42,6 +43,8 @@ In this quest, you will add a data entry to the Quest Account using the Manage D
 ## Step 6: Verify and Collect Your Badge
 1. **Check the Quest Screen**: Return to the Stellar Quest Learn page and click the "Verify" button.
 2. **Collect Your Badge**: If successful, collect your new badge.
+<img width="266" alt="image" src="https://github.com/user-attachments/assets/ad1c1efd-0dea-471e-bf61-349cc2e9def7" />
+
 
 ## Additional Notes
 - **View Account Activity**: You can always view activity on an account by visiting [Stellar Expert](https://stellar.expert) and searching for your account’s public key.
