--- a/2-2. Manage_Data.md
+++ b/2-2. Manage_Data.md
@@ -15,7 +15,7 @@ In this quest, you will add a data entry to the Quest Account using the Manage D
 2. **Select the Build Transaction Tab**: Navigate to the "Build Transaction" tab in the main navigation bar.
 
 ## Step 2: Build the Transaction
-1. **Set Transaction Type**: Set the transaction type to "Manage Data".
+1. **Set Transaction Type**: Set the transaction type to "Build Transaction".
 2. **Input Source Account**: Enter the public key of the Quest Account.
 3. **Fetch Sequence Number**: Click the "Fetch Next Sequence Number for Account Starting with 'G…'" button.
 4. **Set Base Fee**: Set the base fee to 100 stroops.
