--- a/2-1. Account_Merge.md
+++ b/2-1. Account_Merge.md
@@ -18,7 +18,7 @@ In this quest, you will delete an account by transferring all of its native XLM 
 2. **Select the Build Transaction Tab**: Navigate to the "Build Transaction" tab in the main navigation bar.
 
 ## Step 3: Fill Out the Necessary Information
-1. **Set Transaction Type**: Set the transaction type to "Account Merge".
+1. **Set Transaction Type**: Set the transaction type to "Build Transaction".
 2. **Input Source Account**: Enter the public key of the Quest Keypair.
 3. **Fetch Sequence Number**: Click the "Fetch Next Sequence Number for Account Starting with 'G…'" button.
 4. **Set Base Fee**: Set the base fee to 100 stroops.
