--- a/1-3. Change_Trust.md
+++ b/1-3. Change_Trust.md
@@ -12,13 +12,13 @@ In this quest, you will establish a trustline between the Quest Account and anot
 
 ## Step 1: Navigate to the Laboratory
 1. **Open the Stellar Laboratory**: Go to the [Stellar Laboratory](https://www.stellar.org/laboratory/).
-2. **Select the Build Transaction Tab**: Navigate to the "Build Transaction" tab in the main navigation bar.
+2. **Select the Build Transaction Tab**: Navigate to the "Transaction" tab in the main navigation bar.
 <img width="281" alt="image" src="https://github.com/user-attachments/assets/5cc07e46-a226-47d8-95d2-c1ac9535b159" />
 <img width="664" alt="image" src="https://github.com/user-attachments/assets/258ad88d-180a-4b17-8688-17337ecf3080" />
 
 
 ## Step 2: Fill Out the Necessary Fields
-1. **Set Transaction Type**: Set the transaction type to "Transaction".
+1. **Set Transaction Type**: Set the transaction type to "Build Transaction".
 2. **Input Source Account**: Enter the public key of the Quest Account.
 3. **Fetch Sequence Number**: Click the "Fetch Next Sequence Number for Account Starting with 'G…'" button.
 4. **Set Base Fee**: Set the base fee to 100 stroops.
