--- a/1-2. Payment.md
+++ b/1-2. Payment.md
@@ -12,10 +12,10 @@ In this quest, you will perform a payment operation by submitting a transaction 
 
 ## Step 1: Navigate to the Laboratory
 1. **Open the Stellar Laboratory**: Go to the [Stellar Laboratory](https://www.stellar.org/laboratory/).
-2. **Select the Build Transaction Tab**: Navigate to the "Build Transaction" tab in the main navigation bar.
+2. **Select the Build Transaction Tab**: Navigate to the "Transaction" tab in the main navigation bar.
 
 ## Step 2: Fill Out the Necessary Fields
-1. **Set Transaction Type**: Set the transaction type to "Transaction".
+1. **Set Transaction Type**: Set the transaction type to "Build Transaction".
 2. **Input Source Account**: Enter the public key of the Quest Account.
 3. **Fetch Sequence Number**: Click the "Fetch Next Sequence Number for Account Starting with 'G…'" button.
 4. **Set Base Fee**: Set the base fee to 100 stroops.
