--- a/2-3. Set_Options_Home_Domain.md
+++ b/2-3. Set_Options_Home_Domain.md
@@ -9,6 +9,7 @@ In this quest, you will create, host, and link to a `stellar.toml` file from you
 - [Join Stellar Developer Commuinity](https://discord.com/invite/stellardev)
 - [Stellar Documentation](https://developers.stellar.org/docs/)
 - [Create Account Keypair](https://lab.stellar.org/account/create)
+- [Glitch template demo](https://glitch.com/edit/#!/remix/sql-02-02)
 
 ## Step 1: Create and Host a `stellar.toml` File
 1. **Navigate to the Template Demo**: Go to the [Glitch template demo](https://glitch.com/edit/#!/remix/sql-02-02).
