--- a/2-2. Manage_Data.md
+++ b/2-2. Manage_Data.md
@@ -9,6 +9,7 @@ In this quest, you will add a data entry to the Quest Account using the Manage D
 - [Join Stellar Developer Commuinity](https://discord.com/invite/stellardev)
 - [Stellar Documentation](https://developers.stellar.org/docs/)
 - [Create Account Keypair](https://lab.stellar.org/account/create)
+- [Base64 Decode](https://www.base64decode.org/)
 
 ## Step 1: Navigate to the Laboratory
 1. **Open the Stellar Laboratory**: Go to the [Stellar Laboratory](https://www.stellar.org/laboratory/).
